<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragment.CatalogFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        android:text="@string/text_catalog"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_arrow_up_down" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sortButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@null"
                android:text="@string/text_sort"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_arrow_down" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_filters" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_filter" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        style="@style/NoScrollIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chips_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleLine="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_filter_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipCornerRadius="20dp"
                android:text="@string/text_chip_view_all" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_filter_face"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipCornerRadius="20dp"
                android:text="@string/text_chip_face" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_filter_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipCornerRadius="20dp"
                android:text="@string/text_chip_body" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_filter_tan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipCornerRadius="20dp"
                android:text="@string/text_chip_tan" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_filter_stores"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipCornerRadius="20dp"
                android:text="@string/text_chip_stores" />
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

</androidx.constraintlayout.widget.ConstraintLayout>